--- a/portfolio.css
+++ b/portfolio.css
@@ -30,18 +30,40 @@ body {
   font-style: normal;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+  font-size: 20px;
+}
+
 h1.big-name {
   font-size: 200px;
   padding-top: 30px;
+  padding-bottom: 30px;
   margin: 0px;
   line-height: 90%;
+  text-align: center;
   /* color: #B3ADBF; */
 }
 
-@media screen and (max-width: 1023px) { h1.big-name { font-size: 150px; }}
+@media screen and (max-width: 1023px) { h1.big-name {
+  font-size: 150px;
+  padding-bottom: 20px;
+}}
 
-@media screen and (max-width: 726px) { h1.big-name { font-size: 80px; }}
+@media screen and (max-width: 726px) { h1.big-name {
+  font-size: 70px;
+  padding-bottom: 10px;
+}}
 
-.big-name{
+.navigation {
   text-align: center;
 }
+
+@media screen and (max-width: 1023px) { a.navigation {
+  font-size: 14px;
+}}
+
+@media screen and (max-width: 726px) { a.navigation {
+  font-size: 8px;
+}}
