--- a/portfolio.css
+++ b/portfolio.css
@@ -33,6 +33,11 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+a.nav-links {
+  color: inherit;
+  text-decoration: none;
   font-size: 20px;
 }
 
@@ -60,10 +65,10 @@ h1.big-name {
   text-align: center;
 }
 
-@media screen and (max-width: 1023px) { a.navigation {
+@media screen and (max-width: 1023px) { a.nav-links {
   font-size: 14px;
 }}
 
-@media screen and (max-width: 726px) { a.navigation {
+@media screen and (max-width: 726px) { a.nav-links {
   font-size: 8px;
 }}
