--- a/portfolio.css
+++ b/portfolio.css
@@ -100,8 +100,10 @@ img.nav-links:hover {
 
 @media screen and (max-width: 1023px) { .placeholder {
   font-size: 10px;
+  text-align: center;
 }}
 
 @media screen and (max-width: 726px) { .placeholder {
   font-size: 8px;
+  text-align: center;
 }}
