--- a/portfolio.css
+++ b/portfolio.css
@@ -92,18 +92,16 @@ img.nav-links:hover {
 }}
 
 .placeholder {
-  text-align: center;
+  text-align:center;
   width: 100%;
   padding: 0px;
-  margin: 0px;
+  margin: auto;
 }
 
 @media screen and (max-width: 1023px) { .placeholder {
   font-size: 10px;
-  text-align: center;
 }}
 
 @media screen and (max-width: 726px) { .placeholder {
   font-size: 8px;
-  text-align: center;
 }}
